{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 517,
  "lineage": "46403951-1a2a-0f9e-a4c4-a21ac2c02c36",
  "resources": [
    {
      "module": "module.appgw",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/backendAddressPools/vnet01-beap",
                "ip_addresses": [],
                "name": "vnet01-beap"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/backendHttpSettingsCollection/vnet01-feip",
                "name": "vnet01-feip",
                "path": "/path1/",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/frontendIPConfigurations/vnet01-feip",
                "name": "vnet01-feip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg5/providers/Microsoft.Network/publicIPAddresses/PublicIPForGWAPP",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/frontendPorts/vnet01-feport",
                "name": "vnet01-feport",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/gatewayIPConfigurations/vnet01-gateway-ip-conf",
                "name": "vnet01-gateway-ip-conf",
                "subnet_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet01/subnets/dev-vnet01_subnet_appgw"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/frontendIPConfigurations/vnet01-feip",
                "frontend_ip_configuration_name": "vnet01-feip",
                "frontend_port_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/frontendPorts/vnet01-feport",
                "frontend_port_name": "vnet01-feport",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/httpListeners/vnet01-httplstn",
                "name": "vnet01-httplstn",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw",
            "identity": [],
            "location": "eastus",
            "name": "appgw",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/backendAddressPools/vnet01-beap",
                "backend_address_pool_name": "vnet01-beap",
                "backend_http_settings_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/backendHttpSettingsCollection/vnet01-feip",
                "backend_http_settings_name": "vnet01-feip",
                "http_listener_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/httpListeners/vnet01-httplstn",
                "http_listener_name": "vnet01-httplstn",
                "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg5/providers/Microsoft.Network/applicationGateways/appgw/requestRoutingRules/vnet01-rqrt",
                "name": "vnet01-rqrt",
                "priority": 9,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "dev-az104-06-rg5",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": null,
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06",
            "module.az104-06-rg5.azurerm_resource_group.az104-06",
            "module.az104-06-vnet01.azurerm_virtual_network.az104-06",
            "module.pip_GWAPP.azurerm_public_ip.pip",
            "module.vnet01_subnetappgw.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.az104-06-vnet01",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "az104-06",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.60.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f7cdca24-ce36-4981-85cd-e3ff99f966f0",
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet01",
            "location": "eastus",
            "name": "dev-az104-06-vnet01",
            "resource_group_name": "dev-az104-06-rg1"
          },
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06"
          ]
        }
      ]
    },
    {
      "module": "module.az104-06-vnet02",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "az104-06",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.62.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "06335754-32d5-451f-852e-d990b411403b",
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet02",
            "location": "eastus",
            "name": "dev-az104-06-vnet02",
            "resource_group_name": "dev-az104-06-rg1"
          },
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06"
          ]
        }
      ]
    },
    {
      "module": "module.az104-06-vnet03",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "az104-06",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.63.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f9170040-34f1-4fb8-804d-dee80a8f6bca",
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet03",
            "location": "eastus",
            "name": "dev-az104-06-vnet03",
            "resource_group_name": "dev-az104-06-rg1"
          },
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "TestLoadBalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg4/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg4/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB"
              }
            ],
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg4/providers/Microsoft.Network/loadBalancers/TestLoadBalancer",
            "location": "eastus",
            "name": "TestLoadBalancer",
            "resource_group_name": "dev-az104-06-rg4",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.az104-06-rg4.azurerm_resource_group.az104-06",
            "module.pip_LB.azurerm_public_ip.pip"
          ]
        }
      ]
    },
    {
      "module": "module.nic-01",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/networkInterfaces/NIC-01",
            "internal_domain_name_suffix": "etfm13zwz0autbon2p5zt4lg4a.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ip_config_01",
                "primary": true,
                "private_ip_address": "10.60.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet01/subnets/dev-vnet01_subnet0"
              }
            ],
            "location": "eastus",
            "name": "NIC-01",
            "private_ip_address": "10.60.0.4",
            "private_ip_addresses": [
              "10.60.0.4"
            ],
            "resource_group_name": "dev-az104-06-rg1"
          },
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06",
            "module.az104-06-vnet01.azurerm_virtual_network.az104-06",
            "module.vnet01_subnet0.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.nic-02",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/networkInterfaces/NIC-02",
            "internal_domain_name_suffix": "etfm13zwz0autbon2p5zt4lg4a.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ip_config_02",
                "primary": true,
                "private_ip_address": "10.60.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet01/subnets/dev-vnet01_subnet1"
              }
            ],
            "location": "eastus",
            "name": "NIC-02",
            "private_ip_address": "10.60.1.4",
            "private_ip_addresses": [
              "10.60.1.4"
            ],
            "resource_group_name": "dev-az104-06-rg1"
          },
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06",
            "module.az104-06-vnet01.azurerm_virtual_network.az104-06",
            "module.vnet01_subnet1.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.nic-03",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/networkInterfaces/NIC-03",
            "internal_domain_name_suffix": "krltgbwvgipulbjo1giliekahd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ip_config_03",
                "primary": true,
                "private_ip_address": "10.62.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet02/subnets/dev-vnet02_subnet0"
              }
            ],
            "location": "eastus",
            "name": "NIC-03",
            "private_ip_address": "10.62.0.4",
            "private_ip_addresses": [
              "10.62.0.4"
            ],
            "resource_group_name": "dev-az104-06-rg1"
          },
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06",
            "module.az104-06-vnet02.azurerm_virtual_network.az104-06",
            "module.vnet02_subnet0.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.nic-04",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/networkInterfaces/NIC-04",
            "internal_domain_name_suffix": "iaabp4prgs2e5acn11uavd1lzc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ip_config_04",
                "primary": true,
                "private_ip_address": "10.63.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet03/subnets/dev-vnet03_subnet0"
              }
            ],
            "location": "eastus",
            "name": "NIC-04",
            "private_ip_address": "10.63.0.4",
            "private_ip_addresses": [
              "10.63.0.4"
            ],
            "resource_group_name": "dev-az104-06-rg1"
          },
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06",
            "module.az104-06-vnet03.azurerm_virtual_network.az104-06",
            "module.vnet03_subnet0.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_associate_v1s0",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet01/subnets/dev-vnet01_subnet0",
            "network_security_group_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/networkSecurityGroups/nsg_vnet01",
            "subnet_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet01/subnets/dev-vnet01_subnet0"
          },
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06",
            "module.az104-06-vnet01.azurerm_virtual_network.az104-06",
            "module.nsg_vnet01.azurerm_network_security_group.nsg",
            "module.vnet01_subnet0.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_associate_v1s1",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet01/subnets/dev-vnet01_subnet1",
            "network_security_group_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/networkSecurityGroups/nsg_vnet01",
            "subnet_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet01/subnets/dev-vnet01_subnet1"
          },
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06",
            "module.az104-06-vnet01.azurerm_virtual_network.az104-06",
            "module.nsg_vnet01.azurerm_network_security_group.nsg",
            "module.vnet01_subnet1.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_associate_v2s0",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet02/subnets/dev-vnet02_subnet0",
            "network_security_group_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/networkSecurityGroups/nsg_vnet02",
            "subnet_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet02/subnets/dev-vnet02_subnet0"
          },
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06",
            "module.az104-06-vnet02.azurerm_virtual_network.az104-06",
            "module.nsg_vnet02.azurerm_network_security_group.nsg",
            "module.vnet02_subnet0.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_associate_v3s0",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet03/subnets/dev-vnet03_subnet0",
            "network_security_group_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/networkSecurityGroups/nsg_vnet03",
            "subnet_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet03/subnets/dev-vnet03_subnet0"
          },
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06",
            "module.az104-06-vnet03.azurerm_virtual_network.az104-06",
            "module.nsg_vnet03.azurerm_network_security_group.nsg",
            "module.vnet03_subnet0.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_rule_vnet2_vnet3_allow_3389",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/networkSecurityGroups/nsg_vnet02/securityRules/NSG_rule_name_vnet2_to_vnet3_3389",
            "name": "NSG_rule_name_vnet2_to_vnet3_3389",
            "network_security_group_name": "nsg_vnet02",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "dev-az104-06-rg1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06",
            "module.nsg_vnet02.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_rule_vnet2_vnet3_allow_80",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/networkSecurityGroups/nsg_vnet02/securityRules/NSG_rule_name_vnet2_to_vnet3_80",
            "name": "NSG_rule_name_vnet2_to_vnet3_80",
            "network_security_group_name": "nsg_vnet02",
            "priority": 1003,
            "protocol": "Tcp",
            "resource_group_name": "dev-az104-06-rg1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06",
            "module.nsg_vnet02.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_rule_vnet3_vnet2_allow_3389",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/networkSecurityGroups/nsg_vnet03/securityRules/NSG_rule_name_vnet3_to_vnet2_3389",
            "name": "NSG_rule_name_vnet3_to_vnet2_3389",
            "network_security_group_name": "nsg_vnet03",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "dev-az104-06-rg1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06",
            "module.nsg_vnet03.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_rule_vnet3_vnet2_allow_80",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/networkSecurityGroups/nsg_vnet03/securityRules/NSG_rule_name_vnet3_to_vnet2_80",
            "name": "NSG_rule_name_vnet3_to_vnet2_80",
            "network_security_group_name": "nsg_vnet03",
            "priority": 1004,
            "protocol": "Tcp",
            "resource_group_name": "dev-az104-06-rg1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06",
            "module.nsg_vnet03.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_vnet01",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/networkSecurityGroups/nsg_vnet01",
            "location": "eastus",
            "name": "nsg_vnet01",
            "resource_group_name": "dev-az104-06-rg1",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_vnet02",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/networkSecurityGroups/nsg_vnet02",
            "location": "eastus",
            "name": "nsg_vnet02",
            "resource_group_name": "dev-az104-06-rg1",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_vnet03",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/networkSecurityGroups/nsg_vnet03",
            "location": "eastus",
            "name": "nsg_vnet03",
            "resource_group_name": "dev-az104-06-rg1",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06"
          ]
        }
      ]
    },
    {
      "module": "module.peering1to2",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet01/virtualNetworkPeerings/Peering_1to2",
            "name": "Peering_1to2",
            "remote_virtual_network_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet02",
            "resource_group_name": "dev-az104-06-rg1",
            "use_remote_gateways": false,
            "virtual_network_name": "dev-az104-06-vnet01"
          },
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06",
            "module.az104-06-vnet01.azurerm_virtual_network.az104-06",
            "module.az104-06-vnet02.azurerm_virtual_network.az104-06"
          ]
        }
      ]
    },
    {
      "module": "module.peering1to3",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet01/virtualNetworkPeerings/Peering_1to3",
            "name": "Peering_1to3",
            "remote_virtual_network_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet03",
            "resource_group_name": "dev-az104-06-rg1",
            "use_remote_gateways": false,
            "virtual_network_name": "dev-az104-06-vnet01"
          },
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06",
            "module.az104-06-vnet01.azurerm_virtual_network.az104-06",
            "module.az104-06-vnet03.azurerm_virtual_network.az104-06"
          ]
        }
      ]
    },
    {
      "module": "module.peering2to1",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet02/virtualNetworkPeerings/Peering_2to1",
            "name": "Peering_2to1",
            "remote_virtual_network_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet01",
            "resource_group_name": "dev-az104-06-rg1",
            "use_remote_gateways": false,
            "virtual_network_name": "dev-az104-06-vnet02"
          },
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06",
            "module.az104-06-vnet01.azurerm_virtual_network.az104-06",
            "module.az104-06-vnet02.azurerm_virtual_network.az104-06"
          ]
        }
      ]
    },
    {
      "module": "module.peering3to1",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet03/virtualNetworkPeerings/Peering_3to1",
            "name": "Peering_3to1",
            "remote_virtual_network_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet01",
            "resource_group_name": "dev-az104-06-rg1",
            "use_remote_gateways": false,
            "virtual_network_name": "dev-az104-06-vnet03"
          },
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06",
            "module.az104-06-vnet01.azurerm_virtual_network.az104-06",
            "module.az104-06-vnet03.azurerm_virtual_network.az104-06"
          ]
        }
      ]
    },
    {
      "module": "module.pip_GWAPP",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg5/providers/Microsoft.Network/publicIPAddresses/PublicIPForGWAPP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.119.43.77",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "PublicIPForGWAPP",
            "resource_group_name": "dev-az104-06-rg5",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.az104-06-rg5.azurerm_resource_group.az104-06"
          ]
        }
      ]
    },
    {
      "module": "module.pip_LB",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg4/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.163.211.86",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "PublicIPForLB",
            "resource_group_name": "dev-az104-06-rg4",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.az104-06-rg4.azurerm_resource_group.az104-06"
          ]
        }
      ]
    },
    {
      "module": "module.route_23",
      "mode": "managed",
      "type": "azurerm_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.62.0.0/24",
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/routeTables/route-table-test/routes/route_name_23",
            "name": "route_name_23",
            "next_hop_in_ip_address": "10.60.0.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "dev-az104-06-rg1",
            "route_table_name": "route-table-test",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06",
            "module.az104-06-vnet02.azurerm_virtual_network.az104-06",
            "module.route_table.azurerm_route_table.route-table-test",
            "module.vnet02_subnet0.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.route_32",
      "mode": "managed",
      "type": "azurerm_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.63.0.0/24",
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/routeTables/route-table-test/routes/route_name_32",
            "name": "route_name_32",
            "next_hop_in_ip_address": "10.60.0.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "dev-az104-06-rg1",
            "route_table_name": "route-table-test",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06",
            "module.az104-06-vnet03.azurerm_virtual_network.az104-06",
            "module.route_table.azurerm_route_table.route-table-test",
            "module.vnet03_subnet0.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.route_association_v2s0",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet02/subnets/dev-vnet02_subnet0",
            "route_table_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/routeTables/route-table-test",
            "subnet_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet02/subnets/dev-vnet02_subnet0"
          },
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06",
            "module.az104-06-vnet02.azurerm_virtual_network.az104-06",
            "module.route_table.azurerm_route_table.route-table-test",
            "module.vnet02_subnet0.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.route_association_v3s0",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet03/subnets/dev-vnet03_subnet0",
            "route_table_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/routeTables/route-table-test",
            "subnet_id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet03/subnets/dev-vnet03_subnet0"
          },
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06",
            "module.az104-06-vnet03.azurerm_virtual_network.az104-06",
            "module.route_table.azurerm_route_table.route-table-test",
            "module.vnet03_subnet0.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "route-table-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/routeTables/route-table-test",
            "location": "eastus",
            "name": "route-table-test",
            "resource_group_name": "dev-az104-06-rg1",
            "route": [],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06"
          ]
        }
      ]
    },
    {
      "module": "module.vnet01_subnet0",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet01/subnets/dev-vnet01_subnet0",
            "name": "dev-vnet01_subnet0",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-az104-06-rg1",
            "virtual_network_name": "dev-az104-06-vnet01"
          },
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06",
            "module.az104-06-vnet01.azurerm_virtual_network.az104-06"
          ]
        }
      ]
    },
    {
      "module": "module.vnet01_subnet1",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet01/subnets/dev-vnet01_subnet1",
            "name": "dev-vnet01_subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-az104-06-rg1",
            "virtual_network_name": "dev-az104-06-vnet01"
          },
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06",
            "module.az104-06-vnet01.azurerm_virtual_network.az104-06"
          ]
        }
      ]
    },
    {
      "module": "module.vnet01_subnetappgw",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.3.224/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet01/subnets/dev-vnet01_subnet_appgw",
            "name": "dev-vnet01_subnet_appgw",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-az104-06-rg1",
            "virtual_network_name": "dev-az104-06-vnet01"
          },
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06",
            "module.az104-06-vnet01.azurerm_virtual_network.az104-06"
          ]
        }
      ]
    },
    {
      "module": "module.vnet02_subnet0",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.62.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet02/subnets/dev-vnet02_subnet0",
            "name": "dev-vnet02_subnet0",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-az104-06-rg1",
            "virtual_network_name": "dev-az104-06-vnet02"
          },
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06",
            "module.az104-06-vnet02.azurerm_virtual_network.az104-06"
          ]
        }
      ]
    },
    {
      "module": "module.vnet03_subnet0",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.63.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f094a6a8-75ea-4c18-af05-ea242e9f5b26/resourceGroups/dev-az104-06-rg1/providers/Microsoft.Network/virtualNetworks/dev-az104-06-vnet03/subnets/dev-vnet03_subnet0",
            "name": "dev-vnet03_subnet0",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-az104-06-rg1",
            "virtual_network_name": "dev-az104-06-vnet03"
          },
          "dependencies": [
            "module.az104-06-rg1.azurerm_resource_group.az104-06",
            "module.az104-06-vnet03.azurerm_virtual_network.az104-06"
          ]
        }
      ]
    }
  ]
}